style.css
/* ... */
.top-footer p{
font-size: 25px;
font-weight: 600;
}
.middle-footer .footer-menu{
    display: flex;
}
.footer_menu_list{
    list-style: none;
}
.footer_menu_list a{
    text-decoration: none;
    color: var(--text-color-second);
    font-weight: 500;
    margin-inline: 20px;
}




/* ----- MEDIA QUERY == 1024px / RESPONSIVE ----- */
@media only screen and (max-width: 1024px){
    .featured-text{
        padding: 0;
    }
    .circuit-board{
        width: 450px;
        height: 450px;
    }
}

/* ----- MEDIA QUERY == 900px / RESPONSIVE ----- */
@media only screen and (max-width: 900px) {
    .nav-button{
        display: none;
    }
    .nav-menu.responsive{
        left: 0;
    }
    .nav-menu{
        position: fixed;
        top: 80px;
        left: -100%;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background:red;
        backdrop-filter: blur(20px);
        width: 100%;
        min-height: 450px;
        height: 90vh;
        transition: .3s;
    }
    .nav_menu_list{
        flex-direction: column;
    }
    .nav-menu-btn{
        display: flex;
        align-items: center;
        justify-content: center;
    }
    .featured-box{
        flex-direction: column;
        justify-content: center;
        height: 100vh;
    }
    .wrapper{
        padding-inline: 5vw;
    }
    .featured-text{
        width: 100%;
        order: 2;
        justify-content: center;
        align-content: flex-start;
        min-height: 60vh;
        padding-left: 0;
    }
    .social_icons{
        margin-top: 2em;
    }
    .featured-image{
        order: 1;
        justify-content: center;
        align-items: center;
        min-height: 150px;
        width: 100%;
        margin-top: 65px;
    }
    .circuit-board{
        width: 45vw;
        height: 45vw;
        max-width: 200px;
        max-height: 200px;
        margin: 0 auto;
    }
    .skills-box {
        width: 100%;
    }
    .about-info{
        position: relative;
        display: flex;
        right: 0;
        align-items: center;
        flex-direction: column;
        padding-block: 30px 70px;
        padding-inline: 20px;
        width: 100%;
        box-shadow: 1px 8px 10px 2px var(--first-shadow-color);
        border-radius: 20px;
    }
    .row{
        display: flex;
        flex-direction: column;
        justify-content: center;
        gap: 50px;
    }
    .col{
        display: flex;
        justify-content: center;
        width: 100%;
    }
    .about-info, .contact-info{
        width: 100%;
    }
    .project-container{
        justify-content: center;
    }
    .project-box{
        width: 80%;
    }
    .scroll-btn{
        position: absolute;
        top: 100%;
        left: 50%;
        translate: -50%;
        display: flex;
        justify-content: center;
        align-items: center;
        width: 150px;
        height: 50px;
        gap: 5px;
        text-decoration: none;
        color: var(--text-color-second);
        background: var(--color-white);
        border-radius: 30px;
        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
     }

}

/* ----- MEDIA QUERY == 540px / RESPONSIVE ----- */

@media only screen and (max-width: 540px){
    .featured-name{
        font-size: 30px;
    }
    .project-box{
        width: 100%;
    }
    .form-inputs{
        flex-direction: column;
    }
    .input-field{
        width: 100%;
    }
    .wrapper{
        padding-inline: 5vw;
    }
    .featured-text{
        padding-left: 0;
    }
    .featured-text-info p{
        font-size: 13px;
    }
    .skills-title{
        left: 0;
    }
    .skills-box{
        right: 0;
        margin-top: 30px;
        width: 100%;
    }
    .about-info{
        right: 0;
    }
    .social_icons{
        margin-top: 1.5em;
    }
    .footer_menu_list a{
        margin-inline: 10px;
        font-size: 14px;
    }
    .nav-link{
        padding-inline: 10px;
        margin-inline: 10px;
    }
}

